# ESP32-T-Display-Amoled-Discord-Chat

./: platformio.ini
Discord Chat/Discord Token Page/: index.html
src/: app.cpp  app.h  config.h  main.cpp  urls.cpp  urls.h
src/corgi_framwork/: Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  Script.h
src/helpers/: HTTP_helper.cpp  HTTP_helper.h  LV_Helper.cpp  LV_Helper.h  LilyGo_AMOLED.cpp  LilyGo_AMOLED.h  SPIFFS_helper.cpp  SPIFFS_helper.h  initSequence.cpp
src/lcd_helpers/: LV_Helper.cpp  LV_Helper.h  LilyGo_AMOLED.cpp  LilyGo_AMOLED.h  initSequence.cpp
src/scripts/BotKeyController/: BotKeyController.cpp  BotKeyController.h
src/scripts/ChatController/: ChatController.cpp  ChatController.h
src/scripts/LoginController/: LoginController.cpp  (+1 more)
src/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.c  ui_events.cpp  ui_events.h  ui_helpers.c  ui_helpers.h
src/ui/fonts/: ui_font_gg_sans_bold.c  ui_font_gg_sans_small.c
src/ui/images/: ui_img_1102433829.c  ui_img_1618681362.c  ui_img_1746740777.c  ui_img_2024208504.c  ui_img_2132233354.c  ui_img_592994106.c  ui_img_649482556.c  ui_img_discord_com_login_normal_png.c
src/ui/screens/: ui_BotKeyScreen.c  ui_LoginScreen.c  ui_Setting_Screen.c
src/web_pages/: DiscordTokenPage.h
test/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h
test/components/: ui_comp_hook.c
test/fonts/: ui_font_gg_sans_bold.c
test/images/: ui_img_364238874.c  ui_img_discord_com_login_normal_png.c
test/screens/: ui_LoginScreen.c  ui_Setting.c  ui_Setting1.c
(+4 files in other folders)
